Add visible submit button

--- a/webapp/index.html
+++ b/webapp/index.html
@@ -129,6 +129,11 @@
                 </select>
                 <small class="hint">Выберите куда копировать посты</small>
             </div>
+            
+            <!-- Submit Button -->
+            <button type="button" class="submit-btn" id="submitBtn" onclick="handleSubmit()">
+                🚀 Начать копирование
+            </button>
         </form>
 
         <!-- Status Section -->
