Remove pavlovsk_market references

--- a/webapp/test.html
+++ b/webapp/test.html
@@ -76,7 +76,7 @@
                     placeholder="Например: durov или 12345678"
                     required
                 >
-                <small class="hint">Название или ID группы (например: pavlovsk_market)</small>
+                <small class="hint">Название или ID группы (например: vk, news, club123)</small>
             </div>
 
             <div class="form-row">
